# terminal-cosmos

./: .gitignore  LICENSE  README.md  pyproject.toml
terminal_cosmos/: __init__.py  __main__.py  main.py
terminal_cosmos/colors/: __init__.py  curses_adapter.py  generator.py
terminal_cosmos/core/: __init__.py  animation_base.py
terminal_cosmos/modes/: __init__.py  fireflies.py  fireworks.py  lightning_storm.py  matrix.py  meteor_shower.py  rain.py  space.py  warp.py
terminal_cosmos/particles/: __init__.py  base_particle.py  particle_pool.py  rain_drop.py
terminal_cosmos/ui/: __init__.py
terminal_cosmos/utils/: __init__.py  color_helpers.py  trail_rendering.py
